calendar touchUI z-index fix

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -29,8 +29,8 @@
 .ui-widget-overlay.ui-datepicker-mask.ui-datepicker-mask-scrollblocker {
   z-index: 10000 !important;
 }
-.ng-trigger.ng-trigger-overlayAnimation.ng-tns-c6-1.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all.ui-shadow.ui-datepicker-touch-ui.ng-star-inserted {
-  z-index: 10001 !important;
+.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all.ui-shadow.ui-datepicker-touch-ui.ng-star-inserted {
+  z-index: 20001 !important;
 }
 
 
